# fiox

./: .gitignore  Cargo.toml  README.md
src/: buffer_aux.rs  lib.rs  utils.rs
src/linux/: buffer.rs  mod.rs  sequential_reader.rs  sequential_writer.rs  utils.rs
src/reader/: buffer_linux.rs  buffer_windows.rs  mod.rs  sequential_reader_linux.rs  sequential_reader_windows.rs  utils.rs
src/windows/: buffer.rs  handles.rs  mod.rs  sequential_reader.rs  sequential_writer.rs  utils.rs
src/writer/: mod.rs
test_data/: test_data.txt
