[package]
name = "fiox"
version = "0.1.0"
edition = "2024"
description = "bam2ab1"
license = "MIT"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Memory",
] }

anyhow = "1"
