[package]
name = "fiox"
version = "0.2.0"
edition = "2024"
description = "file I/O using io_uring/iocp"
license = "MIT"
repository = "https://github.com/keithyin/fiox"
exclude = ["test_data/*"]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
io-uring = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Memory",
] }

[dependencies]
anyhow = "1"
